--- a/lab-tunley/Base.lproj/Main.storyboard
+++ b/lab-tunley/Base.lproj/Main.storyboard
@@ -255,7 +255,7 @@
         <!--Albums-->
         <scene sceneID="Xsm-be-BSW">
             <objects>
-                <viewController id="ds0-yR-OkL" sceneMemberID="viewController">
+                <viewController id="ds0-yR-OkL" customClass="AlbumsViewController" customModule="lab_tunley" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="LR4-AX-VaG">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
