Conform AlbumsViewController to UICollectionViewDataSource

--- a/lab-tunley/Base.lproj/Main.storyboard
+++ b/lab-tunley/Base.lproj/Main.storyboard
@@ -271,7 +271,7 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="wVJ-Pr-YF5" customClass="AlbumCell" customModule="lab_tunley" customModuleProvider="target">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="AlbumCell" id="wVJ-Pr-YF5" customClass="AlbumCell" customModule="lab_tunley" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="127.99999999999997" height="128"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="bs2-Fi-2Is">
@@ -306,6 +306,9 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Albums" id="txY-zB-pzT"/>
+                    <connections>
+                        <outlet property="collectioinView" destination="Drz-6t-PVa" id="J4S-Xq-qcI"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qkf-aY-Gy6" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
